--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=UserAuthService
+
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/authservice
+spring.datasource.username=root
+spring.datasource.password=DB0852@sql*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
